--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,20 @@
+
 Django==1.5.1
+Django-tinymce-filebrowser==0.1.1
+Markdown==2.3.1
+
 Pygments==1.6
 South==0.8.2
+
 dj-database-url==0.2.2
 -e git://github.com/kennethreitz/dj-static.git@e244f5178f0bcaed508ebed3e9f628faed849ec5#egg=dj_static-dev
 django-ckeditor==4.0.2
 django-pygments==0.1
+
 django-toolbelt==0.0.1
+
 gunicorn==18.0
+
 psycopg2==2.4.5
+
+
